force-app/main/default/objects/Bring_Online__c/Bring_Online__c.object-meta.xml
<CustomObject>
    <label>Bring Online Event History</label>
    <nameField>
        <displayFormat>BO-{0000}</displayFormat>
        <label>Bring Online Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bring Online Event History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>