force-app/main/default/objects/Bring_Online__c/fields/Adjusted_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Subsidy__c</fullName>
    <label>Adjusted Subsidy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>