force-app/main/default/objects/Bring_Online__c/fields/Advice_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Advice_Received_Date__c</fullName>
    <label>Advice Received Date</label>
    <type>Date</type>
</CustomField>