force-app/main/default/objects/Bring_Online__c/fields/Application_Decision_by_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Decision_by_Date__c</fullName>
    <label>Application Decision by Date</label>
    <type>Date</type>
</CustomField>