force-app/main/default/objects/Bring_Online__c/fields/Care_Setting__c.field-meta.xml
<CustomField>
    <fullName>Care_Setting__c</fullName>
    <label>Care Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Home Care</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
            <value>
                <fullName>To be confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>