force-app/main/default/objects/Bring_Online__c/fields/Care_Type__c.field-meta.xml
<CustomField>
    <fullName>Care_Type__c</fullName>
    <label>Care Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flexible</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Flexible Care - Innovative Pool</fullName>
            </value>
            <value>
                <fullName>Flexible Care - MPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>