force-app/main/default/objects/Bring_Online__c/fields/Date_Places_will_become_Operational__c.field-meta.xml
<CustomField>
    <fullName>Date_Places_will_become_Operational__c</fullName>
    <label>Date Places will become Operational</label>
    <type>Date</type>
</CustomField>