force-app/main/default/objects/Bring_Online__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Reconsideration initiated by Secretary (S85-4)</fullName>
            </value>
            <value>
                <fullName>Reconsideration requested by affected person (S85-5)</fullName>
            </value>
            <value>
                <fullName>Uphold Decision</fullName>
            </value>
            <value>
                <fullName>Set Aside Decision and Substitute New Decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>