force-app/main/default/objects/Bring_Online__c/fields/Delegate__c.field-meta.xml
<CustomField>
    <fullName>Delegate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bring_Online</relationshipName>
    <type>Lookup</type>
</CustomField>