force-app/main/default/objects/Bring_Online__c/fields/GPMS_Previous_Operational_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Previous_Operational_Effective_Date__c</fullName>
    <description>The date used to record the previous proposed operational effective date</description>
    <label>Previous Operational Effective Date</label>
    <type>Date</type>
</CustomField>