force-app/main/default/objects/Bring_Online__c/fields/Link_to_Document__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Document__c</fullName>
    <label>Link to Document</label>
    <type>TextArea</type>
</CustomField>