force-app/main/default/objects/Bring_Online__c/fields/New_Proposed_Operational_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Proposed_Operational_Effective_Date__c</fullName>
    <label>New Proposed Operational Effective Date</label>
    <type>Date</type>
</CustomField>