force-app/main/default/objects/Bring_Online__c/fields/Number_of_Places__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Places__c</fullName>
    <label>Number of Places</label>
    <type>TextArea</type>
</CustomField>