force-app/main/default/objects/Bring_Online__c/fields/Number_of_Places_to_remain_Provisional__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Places_to_remain_Provisional__c</fullName>
    <label>Number of Places to remain Provisional</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>