force-app/main/default/objects/Bring_Online__c/fields/Number_of_places_to_take_effect__c.field-meta.xml
<CustomField>
    <fullName>Number_of_places_to_take_effect__c</fullName>
    <label>Number of places to take effect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>