force-app/main/default/objects/Bring_Online__c/fields/Operational_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Operational_Effective_Date__c</fullName>
    <label>Operational Effective Date</label>
    <type>Date</type>
</CustomField>