force-app/main/default/objects/Bring_Online__c/fields/Proposed_Operational_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Operational_Date__c</fullName>
    <label>Proposed Operational Date</label>
    <type>Date</type>
</CustomField>