force-app/main/default/objects/Bring_Online__c/fields/Status_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Effective_Date__c</fullName>
    <label>Status Effective Date</label>
    <type>Date</type>
</CustomField>