force-app/main/default/objects/Bring_Online__c/recordTypes/Cancel_BringOnline.recordType-meta.xml
<RecordType>
    <fullName>Cancel_BringOnline</fullName>
    <active>true</active>
    <label>Cancel</label>
</RecordType>