force-app/main/default/objects/Bring_Online__c/recordTypes/Change_Proposed_Operational_Date.recordType-meta.xml
<RecordType>
    <fullName>Change_Proposed_Operational_Date</fullName>
    <active>true</active>
    <label>Change Proposed Operational Date</label>
</RecordType>