force-app/main/default/objects/Bring_Online__c/recordTypes/Correct_BringOnline.recordType-meta.xml
<RecordType>
    <fullName>Correct_BringOnline</fullName>
    <active>true</active>
    <label>Correct</label>
</RecordType>