force-app/main/default/objects/Bring_Online__c/recordTypes/GPMS_Application_For_Determination.recordType-meta.xml
<RecordType>
    <fullName>GPMS_Application_For_Determination</fullName>
    <active>true</active>
    <description>Application For Determination</description>
    <label>Application For Determination</label>
</RecordType>