force-app/main/default/objects/Bring_Online__c/recordTypes/Record_a_Decision_on_Request_for_Reconsideration_BringOnline.recordType-meta.xml
<RecordType>
    <fullName>Record_a_Decision_on_Request_for_Reconsideration_BringOnline</fullName>
    <active>true</active>
    <label>Record a Decision on Request for Reconsideration</label>
</RecordType>