force-app/main/default/objects/Bring_Online__c/recordTypes/Record_Decision_BringOnline.recordType-meta.xml
<RecordType>
    <fullName>Record_Decision_BringOnline</fullName>
    <active>true</active>
    <label>Record Decision</label>
</RecordType>