force-app/main/default/objects/Bring_Online__c/recordTypes/Record_Request_for_Reconsideration_BringOnline.recordType-meta.xml
<RecordType>
    <fullName>Record_Request_for_Reconsideration_BringOnline</fullName>
    <active>true</active>
    <label>Record Request for Reconsideration</label>
</RecordType>