force-app/main/default/objects/Bring_Online__c/recordTypes/Record_Request_for_Reconsideration_by_the_AAT_BringOnline.recordType-meta.xml
<RecordType>
    <fullName>Record_Request_for_Reconsideration_by_the_AAT_BringOnline</fullName>
    <active>true</active>
    <label>Record Request for Reconsideration by the AAT</label>
</RecordType>