force-app/main/default/objects/Bring_Online__c/recordTypes/Withdraw_BringOnline.recordType-meta.xml
<RecordType>
    <fullName>Withdraw_BringOnline</fullName>
    <active>true</active>
    <label>Withdraw</label>
</RecordType>