force-app/main/default/objects/Bring_Online__c/validationRules/Perm_BO_STO_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Perm_BO_STO_Access</fullName>
    <active>true</active>
    <description>STO record access</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
AND(
OR(
ISCHANGED(Decision__c),
ISCHANGED(Event__c),
ISCHANGED(Operational_Effective_Date__c)),
$Permission.GPMS_STO
))</errorConditionFormula>
    <errorMessage>You do not have access to edit Decision, Event and Effective Date. Please exit from editing mode.</errorMessage>
</ValidationRule>